--- a/План действий.md
+++ b/План действий.md
@@ -1,23 +1,21 @@
 ## Сборка модов, настройка мира и настройка клиента для сервера и клиента Майнкрафт.
 
-
-
 ## Сборка модов.
 
-### Надо обратить внимание, что моды бывают разного предназначения (клиентские, серверные, серверно-клиентские), если брать во внимание, что будет игровой сервер. Также можно условно выделить типы: моды для игрового мира (какие-либо изменения, добавления или удаления), моды для улучшения игрового процесса (улучшает то, что уже есть; улучшает взаимодействие с игрой), оптимизирующие и функциональные моды. 
+Надо обратить внимание, что моды бывают разного предназначения (клиентские, серверные, серверно-клиентские), если брать во внимание, что будет игровой сервер. Также можно условно выделить типы: моды для игрового мира (какие-либо изменения, добавления или удаления), моды для улучшения игрового процесса (улучшает то, что уже есть; улучшает взаимодействие с игрой), оптимизирующие и функциональные моды. 
 
-### 1. Выбрать версию игры.
-### 2. Выбрать жанр.
-### 3. Выбрать основной(ые) игровой(ые) мод(ы).
-### 4. Добавить иные игровые моды по основному(ым) моду(ам).
-### 5. Добавить вспомогательные моды для улучшения игрового процесса.
-### 6. Добавить оптимизирующие моды для СЕРВЕРА и КЛИЕНТА.
+1. Выбрать версию игры.
+2. Выбрать жанр.
+3. Выбрать основной(ые) игровой(ые) мод(ы).
+4. Добавить иные игровые моды по основному(ым) моду(ам).
+5. Добавить вспомогательные моды для улучшения игрового процесса.
+6. Добавить оптимизирующие моды для СЕРВЕРА и КЛИЕНТА.
 
-### Дополнительно для клиента:
-### 1. Добавить КЛИЕНТСКИЕ вспомогательные моды для улучшения игрового процесса.
-### 2.  Добавить оптимизирующие моды для КЛИЕНТА (опционально).
-### Дополнительно для сервера:
-### 1. Добавить оптимизирующие моды для СЕРВЕРА (опционально).
+##### Дополнительно для клиента:
+1. Добавить КЛИЕНТСКИЕ вспомогательные моды для улучшения игрового процесса.
+2. Добавить оптимизирующие моды для КЛИЕНТА (опционально).
+##### Дополнительно для сервера:
+1. Добавить оптимизирующие моды для СЕРВЕРА (опционально).
 
 
 
